<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidFileExplorer</string>
    <string name="action_settings">Settings</string>
    <string name="up">Up</string>
    <string name="rm_file">Delete</string>
    <string name="mv_file">Rename</string>
    <string name="no_read_perm">"U can't touch this!"</string>
    <string name="no_write_perm">"U can't touch this!"</string>
    <string name="could_not_del_files">Could not delete one or more files :/</string>
    <string name="files_deleted">Successfully deleted files</string>
    <string name="rename_file">Rename</string>
    <string name="new_filename">new name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="successfully_renamed">Success!</string>
    <string name="renaming_failed">D\'ouh! :/</string>
    <string name="dir_file_color_equal">Directory and file color equal now.</string>
    <string name="internal_error">Internal error :(</string>
    <string name="num_selected">Selected</string>
    
    <string name="pref_unknownMimeTypeHandler_title">Unknown file type handling</string>
    <string name="pref_unknownMimeTypeHandler_dialogTitle">How to open unknown file types?</string>
    <string name="pref_unknownMimeTypeHandler_default">text/html</string>

    <string-array name="pref_unknownMimeTypeHandler_entries">
        <item>Choose App on my own</item>
        <item>Open in browser</item>
    </string-array>
    <string-array name="pref_unknownMimeTypeHandler_values">
        <item>*/*</item>
        <item>text/html</item>
    </string-array>
    
    <string name="pref_dirColor_title">Directory color</string>
    <string name="pref_dirColor_dialogTitle">Choose color for directories</string>
    <string name="pref_dirColor_default">#654321</string>

    <string-array name="pref_dirColor_entries">
        <item>Black</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>
    <string-array name="pref_dirColor_values">
        <item>#000000</item>
        <item>#0000ff</item>
        <item>#ff0000</item>
    </string-array>
    
        
    <string name="pref_fileColor_title">File color</string>
    <string name="pref_fileColor_dialogTitle">Choose color for files</string>
    <string name="pref_fileColor_default">#123456</string>

</resources>